syntax = "proto3";

package monohub;

message ReferenceRequest {
    string ref = 1;
}

message RefObject {
    string type = 1;
    string sha = 2;
}

message ReferenceResponse {
  string ref = 1;
  string node_id = 2;
  repeated RefObject objects = 3;
}
